--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
+    "react-testing-library": "^8.0.1",
     "redux": "^4.1.2",
+    "redux-mock-store": "^1.5.4",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.5",
